@@ -1,4 +1,4 @@
-* Thu May 5 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.0
+* Sat May 7 2005 Brendan O'Dea <bod@optusnet.com.au> 2.1.0
 - Add IPv6 support from Jonathan McDowell.
 - Add CHAP support from Jordan Hrycaj (work in progress).
 - Add interim accounting support from Vladislav Bjelic.
@@ -53,6 +53,10 @@
   allocated (uses config->debug).
 - Initialise log_stream to stderr to catch errors before the config file
   is read.
+- Fix leak in session freelist when initial RADIUS session allocation
+  fails.
+- Don't process C_LASTSEEN unless we're a master (otherwise a crashed
+  master kills all slaves once restarted).
 
 * Fri Dec 17 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.13
 - Better cluster master collision resolution: keep a counter of state
